<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="projects">Projects</string>
    <string name="project">Project</string>
    <string name="project_id">ID</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="statistics">Statistics</string>
    <string name="participants">Participants</string>
    <string name="tasks">Tasks</string>
    <string name="participants_colon">Participants:</string>
    <string name="tasks_colon">Tasks:</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="start_date_input">Start Date</string>
    <string name="deadline_input">Deadline</string>
    <string name="create_project">Create Project</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="graphql">GraphQL</string>
    <string name="rest">REST</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
</resources>