<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/statistics_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/statistics"
        android:textColor="@color/darkGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statistics_heading" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/start_date_text"
        app:layout_constraintTop_toBottomOf="@id/statistics_heading"
        tools:text="2022-01-01" />

    <TextView
        android:id="@+id/end_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date_text" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_date"
        app:layout_constraintTop_toBottomOf="@id/start_date"
        tools:text="2022-12-31" />

    <TextView
        android:id="@+id/participants_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants_colon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_date_text" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="7"
        app:layout_constraintStart_toStartOf="@id/start_date"
        app:layout_constraintTop_toBottomOf="@id/end_date" />

    <TextView
        android:id="@+id/tasks_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_colon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participants_text" />

    <TextView
        android:id="@+id/tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        app:layout_constraintStart_toStartOf="@id/start_date"
        app:layout_constraintTop_toBottomOf="@id/participants" />

</androidx.constraintlayout.widget.ConstraintLayout>